--- a/index.html
+++ b/index.html
@@ -1,33 +1,100 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Markdown Blog</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Dev Blog</title>
+    <link rel="stylesheet" href="assets/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Georgia:wght@400;700&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-inter bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
+    <!-- Header section with blog title and navigation -->
+    <header class="bg-blue-600 dark:bg-blue-800 text-white p-6 shadow-md rounded-b-lg">
+        <div class="max-w-4xl mx-auto flex justify-between items-center">
+            <h1 class="text-3xl font-bold">My Dev Blog</h1>
+            <nav>
+                <ul class="flex space-x-6">
+                    <li><a href="index.html" class="hover:underline text-lg">Home</a></li>
+                    <!-- Add more navigation links here if needed, e.g., About, Contact -->
+                    <li><a href="#" id="theme-toggle" class="hover:underline text-lg">Toggle Theme</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <header>
-    <h1>My Markdown Blog</h1>
-  </header>
+    <main class="max-w-4xl mx-auto p-6 mt-8">
+        <!-- Introduction section about the blog's focus -->
+        <section class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md mb-8">
+            <h2 class="text-2xl font-semibold mb-4">Crafting Systems & Solutions</h2>
+            <p class="text-lg">
+                Welcome to my digital workshop! As a programmer, I'm passionate about dissecting problems, designing elegant systems, and building robust solutions. Here, I share my thoughts, insights, and lessons learned from the exciting world of software development.
+            </p>
+            <p class="text-lg mt-2">
+                Expect deep dives into architecture, programming paradigms, and practical guides on how to build things better.
+            </p>
+        </section>
 
-  <main>
-    <nav id="post-list" aria-label="Blog posts">
-      <!-- Posts list will be rendered here -->
-    </nav>
+        <!-- Section to list recent blog posts -->
+        <section id="posts" class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+            <h2 class="text-2xl font-semibold mb-4">Recent Posts</h2>
+            <!-- Posts will be dynamically listed here by JavaScript -->
+            <div id="posts-container">
+                <!-- Links to posts will be appended here -->
+            </div>
+        </section>
+    </main>
 
-    <article id="post-content" tabindex="0">
-      <section class="intro">
-        <h2>Welcome!</h2>
-        <p>Hi, I’m [Your Name], a passionate developer and writer.</p>
-        <p>This is my minimalist markdown blog. Click any post on the left to get started.</p>
-      </section>
-    </article>
-  </main>
+    <!-- Footer section -->
+    <footer class="mt-12 p-6 text-center text-gray-600 dark:text-gray-400">
+        <p>&copy; 2025 My Dev Blog. All rights reserved.</p>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="script.js"></script>
+    <!-- JavaScript to dynamically list posts and handle theme toggling -->
+    <script>
+        // Array of post objects, each with a title and a corresponding markdown file.
+        // This array will be used to generate links to individual posts.
+        const posts = [
+            { title: "Hello World: My First System", file: "hello-world.md" },
+            { title: "Principles of Scalable System Design", file: "system-design.md" }
+        ];
 
+        // Get the container element where post links will be appended.
+        const postsContainer = document.getElementById("posts-container");
+
+        // Loop through the 'posts' array to create and append links for each post.
+        posts.forEach(post => {
+            // Create an anchor (<a>) element for the post link.
+            const link = document.createElement("a");
+            // Set the href attribute to navigate to post.html with the specific markdown file as a query parameter.
+            link.href = `post.html?file=${post.file}`;
+            // Set the text content of the link to the post's title.
+            link.textContent = post.title;
+            // Add Tailwind CSS classes for styling the post links.
+            link.className = "post-link block p-4 mb-3 bg-gray-50 dark:bg-gray-700 rounded-md shadow-sm hover:bg-blue-100 dark:hover:bg-blue-700 transition-colors duration-200 text-lg font-medium";
+            // Append the created link to the posts container.
+            postsContainer.appendChild(link);
+        });
+
+        // Theme Toggle functionality
+        const themeToggle = document.getElementById('theme-toggle');
+        const htmlElement = document.documentElement;
+
+        // Check for saved theme preference or default to system preference
+        const currentTheme = localStorage.getItem('theme') || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+        if (currentTheme === 'dark') {
+            htmlElement.classList.add('dark');
+        }
+
+        // Add event listener for theme toggle button
+        themeToggle.addEventListener('click', () => {
+            if (htmlElement.classList.contains('dark')) {
+                htmlElement.classList.remove('dark');
+                localStorage.setItem('theme', 'light');
+            } else {
+                htmlElement.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+            }
+        });
+    </script>
 </body>
 </html>
